Added missing command

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -19,3 +19,6 @@ COPY resources/minecraft/server.jar /var/www/app
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
     chmod -R 771 /var/www/app && \
     chown -R ${SINDRIA_USER}:${SINDRIA_USER} /var/www/app
+
+#java -Xmx1024M -Xms1024M -jar minecraft_server.1.17.1.jar nogui
+CMD ["java", "-Xmx1024M", "-jar", "minecraft_server.1.17.1.jar", "nogui"]
